syntax = "proto3";

option go_package="github.com/mohitkumar/api_v1";

message LogRecord{
    bytes value =1;
    uint64 offset=2;
}

message ProduceRequest{
    LogRecord record = 1;
}

message ProduceResponse{
    uint64 offset = 1;
}

message ConsumeRequest{
    uint64 offset = 1;
}

message ConsumeResponse{
    LogRecord record = 1;
}

service Log{
    rpc Produce(ProduceRequest) returns (ProduceResponse){};
    rpc Consume(ConsumeRequest) returns (ConsumeResponse){};
    rpc ProduceStream(stream ProduceRequest) returns (stream ProduceResponse){};
    rpc ConsumeStream(stream ConsumeRequest) returns (stream ConsumeResponse){};
}
